<resources>
    <string name="app_name">PocketPrompter</string>
    <string name="action_settings">Settings</string>

    <string name="speed">Speed</string>
    <string name="speed_desc">Select the speed of teleprompter script</string>
    <string name="bg_color">Background color</string>
    <string name="bg_color_desc">Select the background color for teleprompter script</string>
    <string name="text_color">Text Color</string>
    <string name="text_color_desc">Select the text color of teleprompter script</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_desc">Select the text size of teleprompter script</string>

    <string name="KEY_TEXT_SIZE" translatable="false">KEY_TEXT_SIZE</string>
    <string name="KEY_BG_COLOR" translatable="false">KEY_BG_COLOR</string>
    <string name="KEY_TEXT_COLOR" translatable="false">KEY_TEXT_COLOR</string>
    <string name="KEY_SPEED" translatable="false">KEY_SPEED</string>

    <string name="speed10">10</string>
    <string name="speed20">20</string>
    <string name="speed30">30</string>

    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="speed_10_value" translatable="false">1</string>
    <string name="speed_20_value" translatable="false">2</string>
    <string name="speed_30_value" translatable="false">3</string>

    <string name="bg_color_white_value" translatable="false">1</string>
    <string name="bg_color_black_value" translatable="false">2</string>

    <string name="text_color_black_value" translatable="false">1</string>
    <string name="text_color_white_value" translatable="false">2</string>
    <string name="text_color_blue_value" translatable="false">3</string>
    <string name="text_color_red_value" translatable="false">4</string>

    <string name="text_size_small_value" translatable="false">1</string>
    <string name="text_size_medium_value" translatable="false">2</string>
    <string name="text_size_large_value" translatable="false">3</string>

    <string name="capture_image">Capture Image</string>
    <string name="add_a_file">Add a file</string>
    <string name="settings">Settings</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_content_here">Enter content here</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="select_file_icon">Select File Icon</string>
    <string name="failed_to_save_data">Failed to save data. Please try later</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="play">Play</string>
    <string name="select_picture">Select picture</string>
    <string name="havent_picked_image">You haven\'t picked image yet.</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="no_files_added">No files added</string>
    <string name="add_widget">Add widget</string>
    <string name="file_icon">File icon</string>
    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="banner_ad_unit_id">ca-app-pub-7180764529818538/5546539377</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-7180764529818538/7408261861</string>
    <string name="download_file">Download File</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="download_success">Download successful</string>
    <string name="download_fail">Download failed. Please try later</string>
    <string name="licenses">Licenses</string>

    <string name="extract_text">Extract Text</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Text cannot be extracted due to low device storage</string>
    <string name="no_camera_permission">Please provide camera permissions to access this feature.</string>
    <string name="permission_camera_rationale">Access to the camera is needed for extracting text</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured.</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="delete_file">Delete File</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_this_item">Are you sure you want to delete this item?</string>
    <string name="delete_failed">Deletion Failed. Please try later</string>
    <string name="delete_successful">Delete successful</string>
    <string name="edit_file">Edit File</string>
    <string name="edit_a_file">Edit a file</string>
    <string name="update_failed">Update Failed. Please try later.</string>
    <string name="update_successful">Updated successfully</string>

</resources>
